[project]
name = "email-triage-env"
version = "0.1.0"
description = "Email triage hackathon submission"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "transformers",
    "numpy",
    "pandas",
    "scikit-learn",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pyyaml",
    "openenv==0.1.13"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"